fix small wrapping issue

--- a/client/src/calendar/HoursTable.module.css
+++ b/client/src/calendar/HoursTable.module.css
@@ -2,6 +2,7 @@
     padding-top: 48px;
     background: #fff;
     border-right: 1px solid #ddd;
+    white-space: nowrap;
 }
 
 .hour {
